--- a/companywebsite/productcompany/templates/contact.html
+++ b/companywebsite/productcompany/templates/contact.html
@@ -46,21 +46,20 @@
                     </div>
                     <b><h2>Contact Information:</h2></b>
                     <p><b>&emsp;&ensp;Address:</b>
-                         No:101, 5hth street, Besant Nagar, Chennai-600055, TamilNadu
+                         No:100, 5th street, Anna nagar Nagar, Chennai-600040, TamilNadu
                     </p>
                     <ul>
-                        <li><b>phone: 2379734973</b></li>
-                        <li><b>shop owner no</b>: 9444455555</li>
-                        <li><b>Shop Manager Number:</b> 8957425552</li>
-                        <li><b>Email Id:</b>mobilestore88@gmail.com</li>
-                        <li><b>Email Id:</b>mobilestore33@gmail.com</li>
+                        <li><b>phone: 1234567890</b></li>
+                        <li><b>shop owner no</b>: 7894561230</li>
+                        <li><b>Email Id:</b>mobilestore69@gmail.com</li>
+                        <li><b>Email Id:</b>mobilestore96@gmail.com</li>
                     </ul>
                     <div style="text-align: center;color:violet;font-size:20px;"><b>Please use our services!</b></div>
 
                 </div>
                 <div class="footer">
                 <footer style="color:white">
-                Copyright &copy;2022 Developed by Sathish R</footer></div>
+                Copyright &copy;2023 Developed by Dinesh Kumar B</footer></div>
             </div>
         </div>
     </body>
