--- a/companywebsite/productcompany/templates/home.html
+++ b/companywebsite/productcompany/templates/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>
-            Home Page
+            PRODUCT SITE
         </title>
         <meta name="viewport" 
          content="width=device-width, initial-scale=1.0">
@@ -24,19 +24,19 @@
                 <header>
                     <div class=logo></div>
                     <div class=h>
-                    <a href="home.html" title="Home" style="color: darkred; text-decoration: none;"><b>Home</b></a></div>
+                    <a href="home.html" title="Home" style="color: darkred; text-decoration: none;"><b>HOME</b></a></div>
                     <div class="prod">
-                        <a href="products.html" title="Products" style="color: darkred; text-decoration: none;"><b>Products</b></a>
+                        <a href="products.html" title="Products" style="color: darkred; text-decoration: none;"><b>PRODUCTS</b></a>
                     </div>
                     <div class="people">
-                        <a href="people.html" title="People" style="color:darkred; text-decoration: none;"><b>People</b></a>
+                        <a href="people.html" title="People" style="color:darkred; text-decoration: none;"><b>PEOPLES</b></a>
                     </div>
                     <div class="contact">
-                        <a href="contact.html" title="Contact Us" style="color:darkred; text-decoration: none;"><b>Contact Us</b></a>
+                        <a href="contact.html" title="Contact Us" style="color:darkred; text-decoration: none;"><b>CONTACT US</b></a>
                     </div>
                 </header>
                 <div class="title">
-                    <h1>Home</h1>
+                    <h1>MOBILES</h1>
                 </div><br>
                 <div class="content">
                     <div class="text">
@@ -46,17 +46,17 @@
                     <p>Our store provides various Types and models of Mobile phones which u wish to get. You can view our store's products in our products page and can choose your desired Mobile Phones and inform us, we will deliver it.</p>
                     <b>Benefits of using our store:</b>
                     <ul>
-                        <li>1- yr Warranty</li>
-                        <li>3 months replacement guarantee</li>
+                        <li>1- year extended Warranty</li>
+                        <li>3 months replacement waranty</li>
                         <li>Cash on Delivery</li>
                         <li>EMI Available</li>
-                        <li>Free accessories on payment above Rs.50000</li></ul>
+                        <li>Free accessories on payment above RS:50000</li></ul>
                     <div style="text-align: center;color:mediumaquamarine;font-size:20px;"><b>Kindly use our services!</b></div>
 
                 </div>
                 <div class="footer">
                 <footer style="color:white">
-                Copyright &copy;2022 Developed by Sathish R</footer></div>
+                Copyright &copy;2023 Developed by Dinesh Kumar B</footer></div>
             </div>
         </div>
     </body>
