--- a/companywebsite/productcompany/templates/people.html
+++ b/companywebsite/productcompany/templates/people.html
@@ -198,7 +198,7 @@
                 </div>
                 <div class="footer">
                 <footer style="color:white">
-                Copyright &copy;2022 Developed by Sathish R</footer></div>
+                Copyright &copy;2023 Developed by Dinesh Kumar B</footer></div>
             </div>
         </div>
     </body>
