--- a/companywebsite/productcompany/templates/products.html
+++ b/companywebsite/productcompany/templates/products.html
@@ -197,7 +197,7 @@
 
                 <div class="footer">
                 <footer style="color:white">
-                Copyright &copy;2022 Developed by Sathish R</footer></div>
+                Copyright &copy;2023 Developed by Dinesh KUmar B</footer></div>
             </div>
         </div>
     </body>
