--- a/companywebsite/productcompany/templates/home.html
+++ b/companywebsite/productcompany/templates/home.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="footer">
                 <footer style="color:white">
-                Copyright &copy;2023 Developed by Dinesh Kumar B</footer></div>
+                Copyright &copy;2023 Developed by Hemanth Babu</footer></div>
             </div>
         </div>
     </body>
